# BattleshipGame

./: .gitignore  BattleshipGame.cpp  BattleshipGame.sln  BattleshipGame.vcxproj  BattleshipGame.vcxproj.filters  BattleshipNaivePlayer.cpp  BattleshipNaivePlayer.h  BattleshipPlayerAlgoFromFile.cpp  BattleshipPlayerAlgoFromFile.h  BattleshipPlayerFromFile.cpp  BattleshipPlayerFromFile.h  Battleship_MAP_player.cpp  Battleship_MAP_player.h  BoardClass.cpp  BoardClass.h  CMakeLists.txt  FromFilePlayer.lib  GameFromFileManager.cpp  GameFromFileManager.h  GameManager.cpp  GameManager.h  IBattleshipGameAlgo.h  README.md  ReadMe.txt  Ship.cpp  Ship.h  Utils.cpp  Utils.h  file_names.txt  stdafx.cpp  stdafx.h
Debug/: BattleshipGame.ilk  BattleshipGame.pch  battleshipplayerfromfile.obj.enc  vc140.idb
Debug/BattleshipGame.tlog/: BattleshipGame.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
FromFilePlayer/: FromFilePlayer.vcxproj  FromFilePlayer.vcxproj.filters
FromFilePlayer/x64/Release/FromFilePlayer.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  FromFilePlayer.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
MAP_Player/: MAP_Player.vcxproj  MAP_Player.vcxproj.filters
MAP_Player/x64/Release/MAP_Player.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  MAP_Player.lastbuildstate  MAP_Player.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
NaivePlayer/: NaivePlayer.vcxproj  NaivePlayer.vcxproj.filters
NaivePlayer/x64/Release/NaivePlayer.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  NaivePlayer.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
TestFilesV3/Bad Boards/: bad_board_0.sboard  bad_board_1.sboard  bad_board_2.sboard
TestFilesV3/Good_Boards/: good_board_1.sboard
TestFilesV3/moves/: dirty_but_legal_movesA.attack-a  dirty_but_legal_movesB.attack-b  dirty_ilegal_movesB.attack-b
TestFilesV3/my_test/: clean_movesA.attack  clean_movesB.attack-b  dirty_ilegal_movesA.attack-a  good_board_0.sboard
cmake/: BattleshipNaivePlayer.cpp  BattleshipNaivePlayer.h  BattleshipPlayerFromFile.cpp  CMakeLists.txt  GameManager.cpp  GameManager.h  students.txt
ipch/BATTLESHIPGAME-15570045/: BATTLESHIPGAME-88678496.ipch
ipch/BATTLESHIPGAME-39c1eaff/: BATTLESHIPGAME-88678496.ipch
ipch/BATTLESHIPGAME-81ae9423/: BATTLESHIPGAME-88678496.ipch
x64/Release/: BattleshipGame.iobj  BattleshipGame.ipdb  FromFilePlayer.exp  FromFilePlayer.iobj  FromFilePlayer.ipdb  FromFilePlayer.lib  MAP_Player.exp  MAP_Player.iobj  MAP_Player.ipdb  MAP_Player.lib  NaivePlayer.exp  NaivePlayer.iobj  NaivePlayer.ipdb  NaivePlayer.lib
x64/Release/BattleshipGame.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
